--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_review_tab.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_review_tab.xml
@@ -17,7 +17,7 @@
             android:id="@+id/textViewReview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="상품후기 | "
+            android:text="@string/title_product_review"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textStyle="bold" />
 
@@ -25,7 +25,7 @@
             android:id="@+id/textViewReviewCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="(0)"
+            android:text="@string/title_product_review_count"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
     </LinearLayout>
@@ -40,7 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingRight="20dp">
+        android:paddingEnd="20dp">
 
         <LinearLayout
             android:id="@+id/layoutRagingAvg"
@@ -54,7 +54,7 @@
                 android:id="@+id/textView36"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="구매자 평점"
+                android:text="@string/label_customer_rating"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
             <LinearLayout
@@ -67,7 +67,7 @@
                     android:id="@+id/imageView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="3dp"
+                    android:layout_marginEnd="3dp"
                     android:src="@drawable/star_24px"
                     app:tint="@android:color/holo_orange_light" />
 
@@ -75,7 +75,7 @@
                     android:id="@+id/textViewReviewAvg"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="5"
+                    android:text="@string/_5"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -101,7 +101,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="아주 좋아요" />
+                    android:text="@string/label_review_very_good" />
 
                 <SeekBar
                     android:id="@+id/seekBarVeryGood"
@@ -117,7 +117,7 @@
                     android:id="@+id/textViewVeryGoodCount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="5"
+                    android:text="@string/_5"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -134,7 +134,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="맘에 들어요" />
+                    android:text="@string/label_review_like" />
 
                 <SeekBar
                     android:id="@+id/seekBarLike"
@@ -150,7 +150,7 @@
                     android:id="@+id/textViewLikeCount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="5"
+                    android:text="@string/_5"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -167,7 +167,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="보통이에요" />
+                    android:text="@string/label_review_soso" />
 
                 <SeekBar
                     android:id="@+id/seekBarSoso"
@@ -183,7 +183,7 @@
                     android:id="@+id/textViewSosoCount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="5"
+                    android:text="@string/_5"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -200,7 +200,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="그냥 그래요" />
+                    android:text="@string/label_review_just_ok" />
 
                 <SeekBar
                     android:id="@+id/seekBarJustOk"
@@ -216,7 +216,7 @@
                     android:id="@+id/textViewJuskOkCount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="5"
+                    android:text="@string/_5"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -233,7 +233,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="별로에요" />
+                    android:text="@string/label_review_not_much" />
 
                 <SeekBar
                     android:id="@+id/seekBarNotMuch"
@@ -249,7 +249,7 @@
                     android:id="@+id/textViewNotMuchCount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="5"
+                    android:text="@string/_5"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -278,7 +278,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layoutDirection="rtl"
-                android:text="평점"
+                android:text="@string/label_rating"
                 app:chipIcon="@drawable/expand_more_20px"
                 app:chipIconEnabled="true" />
 
@@ -288,7 +288,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layoutDirection="rtl"
-                android:text="키"
+                android:text="@string/label_height"
                 app:chipIcon="@drawable/expand_more_20px"
                 app:chipIconEnabled="true" />
 
@@ -298,7 +298,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layoutDirection="rtl"
-                android:text="체중"
+                android:text="@string/label_weight"
                 app:chipIcon="@drawable/expand_more_20px"
                 app:chipIconEnabled="true" />
 
@@ -308,7 +308,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layoutDirection="rtl"
-                android:text="평소사이즈"
+                android:text="@string/label_default_size"
                 app:chipIcon="@drawable/expand_more_20px"
                 app:chipIconEnabled="true" />
 
