--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_review_tab_bottom_sheet_size.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_review_tab_bottom_sheet_size.xml
@@ -12,7 +12,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="평소 사이즈"
+        android:text="@string/label_default_size"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
@@ -28,70 +28,70 @@
             style="@style/Widget.Material3.Chip.Filter.Elevated"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="4XS" />
+            android:text="@string/size_4xs" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chipSize3XS"
             style="@style/Widget.Material3.Chip.Filter.Elevated"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="3XS" />
+            android:text="@string/size_3xs" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chipSize2XS"
             style="@style/Widget.Material3.Chip.Filter.Elevated"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2XS" />
+            android:text="@string/size_2xs" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chipSizeXS"
             style="@style/Widget.Material3.Chip.Filter.Elevated"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="XS" />
+            android:text="@string/size_xs" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chipSizeS"
             style="@style/Widget.Material3.Chip.Filter.Elevated"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="S" />
+            android:text="@string/size_s" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chipSizeM"
             style="@style/Widget.Material3.Chip.Filter.Elevated"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="M" />
+            android:text="@string/size_m" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chipSizeL"
             style="@style/Widget.Material3.Chip.Filter.Elevated"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="L" />
+            android:text="@string/size_l" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chipSizeXL"
             style="@style/Widget.Material3.Chip.Filter.Elevated"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="XL" />
+            android:text="@string/size_xl" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chipSize2XL"
             style="@style/Widget.Material3.Chip.Filter.Elevated"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2XL" />
+            android:text="@string/size_xxl" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chipSize3XL"
             style="@style/Widget.Material3.Chip.Filter.Elevated"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="3XL" />
+            android:text="@string/size_3xl" />
     </com.google.android.material.chip.ChipGroup>
 
 
