--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_add.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_add.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -23,7 +24,7 @@
         android:theme="?attr/actionBarTheme"
         app:navigationIcon="@drawable/arrow_back_24px"
         app:navigationIconTint="@color/white"
-        app:title="@string/prompt_add_product_title"
+        app:title="@string/home_product_add_title"
         app:titleTextColor="@color/white" />
 
     <ScrollView
@@ -39,10 +40,9 @@
             android:padding="10dp">
 
             <TextView
-                android:id="@+id/textViewMainImage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/prompt_main_image"
+                android:text="@string/main_image_title"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
             <LinearLayout
@@ -57,12 +57,12 @@
                     style="@style/Widget.Material3.Button.IconButton.Outlined"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:layout_marginRight="5dp"
+                    android:layout_marginEnd="5dp"
                     android:insetLeft="0dp"
                     android:insetTop="0dp"
                     android:insetRight="0dp"
                     android:insetBottom="0dp"
-                    android:text="@string/prompt_main_image_count"
+                    android:text="@string/main_image_count"
                     app:cornerRadius="5dp"
                     app:icon="@drawable/add_photo_alternate_24px"
                     app:iconGravity="textTop"
@@ -189,7 +189,7 @@
                     style="@style/Widget.Material3.Button.OutlinedButton"
                     android:layout_width="wrap_content"
                     android:layout_height="65dp"
-                    android:text="추가"
+                    android:text="@string/action_add"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     app:cornerRadius="5dp" />
 
@@ -198,9 +198,10 @@
             <com.google.android.material.chip.ChipGroup
                 android:id="@+id/chipGroupHashTag"
                 style="@style/Widget.Material3.ChipGroup"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                app:chipSpacingVertical="0dp" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputLayoutPrice"
@@ -259,12 +260,12 @@
                     style="@style/Widget.Material3.Button.IconButton.Outlined"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:layout_marginRight="5dp"
+                    android:layout_marginEnd="5dp"
                     android:insetLeft="0dp"
                     android:insetTop="0dp"
                     android:insetRight="0dp"
                     android:insetBottom="0dp"
-                    android:text="@string/prompt_description_image_count"
+                    android:text="@string/label_description_image_count"
                     app:cornerRadius="5dp"
                     app:icon="@drawable/add_photo_alternate_24px"
                     app:iconGravity="textTop"
@@ -272,27 +273,17 @@
 
             </LinearLayout>
 
-            <!--
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fabUp"
-                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:src="@drawable/arrow_upward_24px" />
-                -->
-
         </LinearLayout>
     </ScrollView>
 
     <LinearLayout
-        android:id="@+id/layoutButtom"
+        android:id="@+id/layoutButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="10dp">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonCancel"
             style="@style/Widget.Material3.Button.OutlinedButton"
             android:layout_width="wrap_content"
@@ -301,12 +292,12 @@
             android:layout_weight="1"
             android:text="@string/action_cancel" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonNext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="다음" />
+            android:text="@string/action_next" />
 
     </LinearLayout>
 
