--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_qna_tab.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_qna_tab.xml
@@ -11,6 +11,6 @@
         android:id="@+id/textView28"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Q&amp;A 화면"
+        android:text="@string/title_qna"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 </LinearLayout>
