--- a/Swimmer_customer/app/src/main/res/layout/fragment_order_detail.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_order_detail.xml
@@ -49,8 +49,8 @@
                 android:id="@+id/imageView4"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="30"
-                android:src="@tools:sample/avatars" />
+                android:layout_weight="30"/>
+                <!--android:src="@tools:sample/avatars"-->
 
             <LinearLayout
                 android:layout_width="0dp"
